[project]
name = "reimp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.3",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "pinecone>=6.0.0",
    "pinecone-notebooks>=0.1.1",
    "pinecone-text>=0.11.0",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.5",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.55.0",
]
